# culture-and-vlm

./: .env.example  Index.html  LICENSE  README.md  constants.py  gemini-1.5-flash_analysis_results.csv  gpt-4o_analysis_results.csv  gpt-4o_bounding_boxes.csv  images.csv  ollama_pipeline.py  ollama_run.py  process_image.py  pyproject.toml  requirements.txt  run.py  run_bounding_boxes.py  run_vqa.py
apps/: server.py
helper_functions/: graph_images.py  ollama_pipeline.py  pipeline.py  process_image.py
misc/: constants.py  cost_calc.py
output_data/: gpt-4o_bounding_boxes.csv
pipelines/: __init__.py  vlm_pipeline.py
