[tool.poetry]
name = "culture-and-vlm"
version = "0.1.0"
description = ""
authors = ["Ankur Duggal <38927181+ankykong@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
