[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Ankur Duggal <38927181+ankykong@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.2"
pydantic = "^2.9.1"
openai = "^1.45.1"
gradio-client = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
